--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Junior</h2>
-                        <p class="about__text">Passionate about programming, I am currently studying a cycle of professional training in Web Application Development.</p>   
+                        <h2 class="about__subtitle">I am Junior</h2>
+                        <p class="about__text">Passionate about programming, I am currently studying a Associate Degree in Web Application Development.</p>   
                         <p class="about__text">I have experience and mastery of various platforms, languages and embedded systems. Skills with cutting edge development tools and procedures. I am able to self-manage my time with independent projects, I also have skills that allow me to work within any productive team.</p>        
                     </div>                                   
                 </div>
@@ -99,7 +99,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text">Associate Degree in web application development</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
