--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h2 class="home__title"><br>I am <span class="home__title-color">Junior,Web</span><br>Developer in training</h2>
+                    <h2 class="home__title"><br>I am <span class="home__title-color">Junior,<span class="negro"> Web</span></span><br>Developer in training</h2>
                     
                     <div class="home__data1">
                         <i class='bx bxs-buildings skills__icon'></i>
